package org.example;

public enum Symptom {
    FEVER,
    RASH,
    COUGH,
    RUNNYNOSE,
    REDEYES,
    FATIGUE,
    HEADACHE,
    LOSSOFAPPETITE,
    JOINTPAIN,
    MUSCLEACHES,
    SORETHROAT,
    DIARRHEA,
    NAUSEA,
    VOMITING,
    BLEEDING,
    BREATHINGDIFFICULTY,
    ABDOMINALPAIN,
    CHILLS,
    STIFFNECK,
    SENSITIVITYTOLIGHT,
    SWOLLENLYMPHNODES,
    WEIGHTLOSS,
    SWEATING,
    NEUROLOGICALIMPAIRMENT,
    CONFUSION,
    PARALYSIS,
    CHESTPAIN,
    ITCHING,
    SENSITIVITYTOTOUCH
}
