@startuml
@startuml

!pragma layout smeta

class Main extends PApplet{
- Scene sceneOne
- Scene sceneTwo

+ void Settings()
+ void Setup()
+ void Draw()
}

class DBConnector{
}

class DiseaseDao{}
class RoleDao{
- ArrayList<Role> roles
}
class ScenarioDao{}
class CardDao{}

class Scene{}

class Overview{}

class MainMenu{}

class StartMenu{}

class CardMenu{}

class Menu{}

class Scenario{
- int scenarioID
- ArrayList<Card> scenarioCards
- ArrayList<Card> pickedCards
- Random random

+ Public Card findCardOption()
+ void addPickedCard()
+ void addScenarioCard()

}

class Card{
- int cardID
- int affectedAmount
- String cardDescription
- String affectedValue
}

class Game{
- int turnCounter
- Disease enemy
- Team team
- Difficulty difficulty

}

class GameController{

}

class GameService{
- ScenarioDao scenarioDao
- CardDao cardDao
- DiseaseDao diseaseDao
- RoleDao roleDao
+ void gameLoop()
+ void setupNewGame(String teamName)
}

class Player{
- String name
- Role role
}

class Team{
- String name
- ArrayList<Players> players
- int highScore

+ public Player getCurrentPlayer(int turnCount)
+ public void addPlayer(Player)
}

abstract class Role{
- String name
+ public {abstract} void useRoleCard()
}

class Mayor extends Role{
- String name
- int publicApproval
+ public void useRoleCard()
}

class InvestigativeJournalist extends Role{
- String name
- int publicReach
+ public void useRoleCard()
}

class Physician extends Role{
- String name
- int patientTrust
+ public void useRoleCard()
}

class Researcher extends Role{
- String name
- int funding
+ public void useRoleCard()
}

class Disease{
- DiseaseType diseaseType
- int mutationRate
- int stability
- ArrayList<transmissionRoute> transmissionRoutes
- int transmissionRate
- ArrayList<Symptom> symptoms
- int incubationTime
- int infectionTime
- int prevalence
- ArrayList<susceptibleGroup> susceptibleGroups
- int fatalityRate
- ArrayList<treatmentOption> treatmentOptions
}

enum diseaseType
enum symptom
enum transmissionRoute
enum susceptibleGroup
enum treatmentOption

Overview --* Menu
MainMenu --* Menu
StartMenu --* Menu
CardMenu --* Menu

Menu *-- GameController

GameController *-- GameService
GameService *-- Game
Game *-- Disease
Game *-- Scenario
Game *-- Team
Scenario *-- Card
Team *-- Player
Player *-- Role

Disease *-- diseaseType
Disease *-- symptom
Disease *-- transmissionRoute
Disease *-- treatmentOption
Disease *-- susceptibleGroup


@enduml